Add buttons to change language in language popup

--- a/LimitedSpace/Assets/Localization/en-us.json
+++ b/LimitedSpace/Assets/Localization/en-us.json
@@ -13,5 +13,6 @@
       "continue": "Continue",
       "all_cats_are_a_mimir": "All cats are a mimir",
       "back_to_home": "Back to home",
-      "paused": "Paused"
+      "paused": "Paused",
+      "language": "Language"
 }
