--- a/LimitedSpace/Assets/Localization/pt-br.json
+++ b/LimitedSpace/Assets/Localization/pt-br.json
@@ -13,5 +13,6 @@
       "continue": "Continuar",
       "all_cats_are_a_mimir": "Todos os gatinhos estão a mimir",
       "back_to_home": "Voltar para início",
-      "paused": "Pausado"
+      "paused": "Pausado",
+      "language": "Idioma"
 }
