--- a/LimitedSpace/Assets/Localization/pt-br.json
+++ b/LimitedSpace/Assets/Localization/pt-br.json
@@ -14,5 +14,6 @@
       "all_cats_are_a_mimir": "Todos os gatinhos estão a mimir",
       "back_to_home": "Voltar para início",
       "paused": "Pausado",
-      "language": "Idioma"
+      "language": "Idioma",
+      "select_language_button": "Selecionar idioma"
 }
