Mudanças de Interface
-Introdução de Nova Fonte
-Atualização de vários ícones e outros elementos de Interface
-Mudança do botão de créditos da tela inicial para a tela de settings.

--- a/LimitedSpace/Assets/Localization/pt-br.json
+++ b/LimitedSpace/Assets/Localization/pt-br.json
@@ -1,6 +1,6 @@
 ﻿{
       "title": "A Mimir",
-      "settings": "Configurações",
+      "settings": "Opções",
       "sound_effects": "Efeitos sonoros",
       "music": "Música",
       "level": "Fase",
