--- a/AMimir/Assets/Localization/en-us.json
+++ b/AMimir/Assets/Localization/en-us.json
@@ -18,5 +18,7 @@
       "select_language_button": "Select language",
       "close_game": "Close game?",
       "confirm_close_game_button": "Yes",
-      "decline_close_game_button": "No"
+      "decline_close_game_button": "No",
+      "privacy_policy_button": "Privacy policy",
+      "terms_of_service_button": "Terms of service"
 }
