Change Worlds names Add new localized texts Rotate Beds 6x4

--- a/AMimir/Assets/Localization/en-us.json
+++ b/AMimir/Assets/Localization/en-us.json
@@ -4,9 +4,9 @@
       "sound_effects": "Sound effects",
       "music": "Music",
       "level": "Level",
-      "easy": "Easy",
+      "small": "Small",
       "medium": "Medium",
-      "hard": "Hard",
+      "large": "Large",
       "credits": "Credits",
       "reset_level": "Reset level",
       "reset": "Restart",
