--- a/AMimir/Assets/Localization/pt-br.json
+++ b/AMimir/Assets/Localization/pt-br.json
@@ -4,9 +4,9 @@
       "sound_effects": "Efeitos sonoros",
       "music": "Música",
       "level": "Fase",
-      "easy": "Fácil",
+      "small": "Pequeno",
       "medium": "Médio",
-      "hard": "Difícil",
+      "large": "Grande",
       "credits": "Créditos",
       "reset_level": "Reiniciar fase",
       "reset": "Reiniciar",
